# PicoEthernetMotor

./: 0main.pd  CMakeLists.txt  HELP.txt  bootselBoot  test.pd  wifruit.pd
src/: CMakeLists.txt  PID_v1.cpp  PID_v1.h  encoder.hpp  fraise.c  main.cpp  motor.hpp  ramp.hpp  udp_server.hpp  version.cpp  wiznet.c  wiznet.h
